<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/arrange_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.example.android.mytourguide.WhereToGoActivity">

    <!-- Numbers category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:id="@+id/city_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <ImageView
            android:id="@+id/city_info_image"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/history"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
            style="@style/CategoryStyle"
            android:text="@string/info1"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explanation1"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
        </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <!-- Family category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:id="@+id/where_to_go"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/where_to_go_image"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"

                android:src="@drawable/togo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
            style="@style/CategoryStyle"
            android:text="@string/info2"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explanation2"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
        </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- Colors category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:id="@+id/what_to_eat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <ImageView
            android:id="@+id/what_to_eat_image"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/kooulouri"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/info3"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explanation3"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
        </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- Phrases category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:id="@+id/city_songs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/music"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/info4"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explanation4"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
        </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
